--- a/frontend/src/components/dashboard/dashboard.module.css
+++ b/frontend/src/components/dashboard/dashboard.module.css
@@ -16,6 +16,11 @@
    backdrop-filter: blur( 7.5px );
 } */
 
+.heading{
+    text-align: center;
+    font-size: 4rem;
+}
+
 .cards {
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
     border-radius: 10px;
@@ -24,14 +29,28 @@
     width: 23.75rem;
     margin: 1rem;
     padding: 1rem;
+    float: left;
 }
 
 .container {
+    float: left;
     width: auto;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
     border-radius: 10px;
     background-color: #3E497A;
-    margin: 2.5rem 5rem;
+    margin: 2rem 3rem;
     padding: 2rem;
     overflow: auto;
+    height: 30rem;
+    scroll-behavior: smooth;
+}
+
+.list {
+    float: inline-start;
+}
+
+.button{
+    margin-left: 10rem;
+    align-items: center;
+    text-align: center;
 }
